feat: scroll touches

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="pl">
+<html lang="pl" class="overflow-x-hidden">
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
     <link rel="stylesheet" href="index.css" />
     <script src="slider.ts" type="module"></script>
     <script src="masonry.ts" type="module"></script>
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet" />
+    <title>giarddesign</title>
   </head>
 
   <body class="overflow-x-hidden">
