fix: fix navbar position

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>giarddesign</title>
   </head>
 
-  <body class="overflow-x-hidden">
+  <body>
     <nav class="sticky top-0 isolate z-[1] flex h-[72px] items-center gap-2 bg-white px-4 py-6 shadow-md lg:px-20">
       <a href="#about" class="text-2xl"><span class="font-black">giard</span>design</a>
       <div class="flex-grow"></div>
