feat: add new placeholders

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
       </section>
       <div
         class="animate__animated animate__fadeInRight relative hidden h-full w-1/2 overflow-hidden bg-transparent lg:block">
-        <img src="https://picsum.photos/600/600?random=0"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-0" />
-        <img src="https://picsum.photos/600/600?random=1"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-1" />
-        <img src="https://picsum.photos/600/600?random=2"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-2" />
+        <img src="./assets/photo0.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-0" />
+        <img src="./assets/photo1.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-1" />
+        <img src="./assets/photo2.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-2" />
 
         <div class="absolute bottom-0 right-0 bg-[#F5F0EC]">
           <button class="group p-4" id="photo-previous">
@@ -167,9 +167,9 @@
     </main>
 
     <section class="flex overflow-x-scroll lg:hidden">
-      <img src="https://picsum.photos/600/600?random=0" class="w-4/5" />
-      <img src="https://picsum.photos/600/600?random=1" class="w-4/5" />
-      <img src="https://picsum.photos/600/600?random=2" class="w-4/5" />
+      <img src="./assets/photo0.jpeg" class="w-4/5" />
+      <img src="./assets/photo1.jpeg" class="w-4/5" />
+      <img src="./assets/photo2.jpeg" class="w-4/5" />
     </section>
 
     <section class="flex h-auto w-full scroll-m-16 flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
@@ -254,7 +254,7 @@
     </section>
 
     <section class="flex h-auto w-full scroll-m-16 flex-col bg-[#1B5B31] lg:h-screen lg:flex-row" id="about">
-      <img src="https://picsum.photos/600/600?random=0" class="h-1/2 w-full lg:h-full lg:w-1/2" id="photo-3" />
+      <img src="./assets/photo9.jpeg" class="h-1/2 w-full lg:h-full lg:w-1/2" id="photo-3" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white" id="reveal">O firmie</small>
         <h2 class="mb-12 text-4xl font-medium text-white lg:text-5xl" id="reveal">
@@ -302,47 +302,57 @@
       <div class="grid grid-flow-dense grid-cols-1 gap-1 lg:grid-cols-3" id="reveal">
         <div id="photo-4-clickable"
           class="group relative flex w-auto cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:transition-transform hover:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=0"
+          <img src="./assets/photo0.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-5-clickable"
           class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=1"
+          <img src="./assets/photo1.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-6-clickable"
           class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=2"
+          <img src="./assets/photo2.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-7-clickable"
           class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=3"
+          <img src="./assets/photo3.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-8-clickable"
           class="group relative hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=4"
+          <img src="./assets/photo4.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-9-clickable"
           class="group relative hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=5"
+          <img src="./assets/photo5.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-10-clickable"
           class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=6"
+          <img src="./assets/photo6.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-11-clickable"
           class="group relative hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=7"
+          <img src="./assets/photo7.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-12-clickable"
           class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
-          <img src="https://picsum.photos/600/600?random=8"
+          <img src="./assets/photo8.jpeg"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
+        </div>
+        <div id="photo-13-clickable"
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="./assets/photo9.jpeg"
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
+        </div>
+        <div id="photo-14-clickable"
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          <img src="./assets/photo10.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
       </div>
@@ -461,24 +471,28 @@
     <dialog id="photos-dialog"
       class="h-2/5 w-[calc(100vw-4rem)] bg-white p-2 backdrop:backdrop-blur-lg lg:h-4/5 lg:w-2/5">
       <div class="relative h-full overflow-hidden">
-        <img src="https://picsum.photos/600/600?random=0"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-4" />
-        <img src="https://picsum.photos/600/600?random=1"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-5" />
-        <img src="https://picsum.photos/600/600?random=2"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-6" />
-        <img src="https://picsum.photos/600/600?random=3"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-7" />
-        <img src="https://picsum.photos/600/600?random=4"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-8" />
-        <img src="https://picsum.photos/600/600?random=5"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-9" />
-        <img src="https://picsum.photos/600/600?random=6"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-10" />
-        <img src="https://picsum.photos/600/600?random=7"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-11" />
-        <img src="https://picsum.photos/600/600?random=8"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-12" />
+        <img src="./assets/photo0.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-4" />
+        <img src="./assets/photo1.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-5" />
+        <img src="./assets/photo2.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-6" />
+        <img src="./assets/photo3.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-7" />
+        <img src="./assets/photo4.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-8" />
+        <img src="./assets/photo5.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-9" />
+        <img src="./assets/photo6.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-10" />
+        <img src="./assets/photo7.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-11" />
+        <img src="./assets/photo8.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-12" />
+        <img src="./assets/photo9.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-13" />
+        <img src="./assets/photo10.jpeg" class="absolute h-full w-full transition-transform duration-1000"
+          id="photo-14" />
 
         <div class="absolute h-full w-full">
           <button class="group absolute top-1/2 bg-[#F5F0EC] p-4" id="photo-previous2">
