feat: fix mobile images size

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
     </main>
 
     <section class="flex overflow-x-scroll lg:hidden">
-      <img src="./assets/photo0.jpeg" class="w-4/5" />
-      <img src="./assets/photo1.jpeg" class="w-4/5" />
-      <img src="./assets/photo2.jpeg" class="w-4/5" />
+      <img src="./assets/photo0.jpeg" class="w-4/5 h-4/5 aspect-square" />
+      <img src="./assets/photo1.jpeg" class="w-4/5 h-4/5 aspect-square" />
+      <img src="./assets/photo2.jpeg" class="w-4/5 h-4/5 aspect-square" />
     </section>
 
     <section class="flex h-auto w-full scroll-m-16 flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
