feat: small responsiveness adjustments

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 
     <main class="isolate flex h-[calc(100vh-72px)] w-full scroll-m-16 items-center" id="about">
       <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
-        <h1 class="animate__animated animate__fadeInLeft mb-12 text-5xl font-medium lg:text-6xl">
+        <h1 class="animate__animated animate__fadeInLeft mb-8 text-5xl font-medium lg:text-6xl">
           Nowoczesna aranżacja Twojego ogrodu
         </h1>
-        <p class="animate__animated animate__fadeInLeft mb-20">
+        <p class="animate__animated animate__fadeInLeft mb-16">
           Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka
           realizacji. Oferujemy kompleksowy zakres usług z indywidualnym
           podejściem do każdego projektu.
@@ -167,9 +167,9 @@
     </main>
 
     <section class="flex overflow-x-scroll lg:hidden">
-      <img src="./assets/photo0.jpeg" class="w-4/5 h-4/5 aspect-square" />
-      <img src="./assets/photo1.jpeg" class="w-4/5 h-4/5 aspect-square" />
-      <img src="./assets/photo2.jpeg" class="w-4/5 h-4/5 aspect-square" />
+      <img src="./assets/photo0.jpeg" class="w-96 h-96 aspect-square" />
+      <img src="./assets/photo1.jpeg" class="w-96 h-96 aspect-square" />
+      <img src="./assets/photo2.jpeg" class="w-96 h-96 aspect-square" />
     </section>
 
     <section class="flex h-auto w-full scroll-m-16 flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
@@ -257,10 +257,10 @@
       <img src="./assets/photo9.jpeg" class="h-1/2 w-full lg:h-full lg:w-1/2" id="photo-3" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white" id="reveal">O firmie</small>
-        <h2 class="mb-12 text-4xl font-medium text-white lg:text-5xl" id="reveal">
+        <h2 class="mb-8 text-4xl font-medium text-white lg:text-5xl" id="reveal">
           Tworzymy <br /><span class="italic">z pasją</span>
         </h2>
-        <p class="mb-20 text-white" id="reveal">
+        <p class="mb-16 text-white" id="reveal">
           Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą
           wykwalifikowani projektanci oraz architekci, których zadaniem jest
           rozpoznanie i realizacja potrzeb każdego Klienta. Nasza specjalizacja
