--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </main>
 
     <section class="flex overflow-x-scroll lg:hidden">
-      <img src="./assets/photo0.jpeg" class="w-96 h-96 aspect-square" />
-      <img src="./assets/photo1.jpeg" class="w-96 h-96 aspect-square" />
-      <img src="./assets/photo2.jpeg" class="w-96 h-96 aspect-square" />
+      <img src="./assets/photo0.jpeg" class="aspect-square h-96 w-96" />
+      <img src="./assets/photo1.jpeg" class="aspect-square h-96 w-96" />
+      <img src="./assets/photo2.jpeg" class="aspect-square h-96 w-96" />
     </section>
 
     <section class="flex h-auto w-full scroll-m-16 flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
@@ -277,7 +277,7 @@
       </div>
     </section>
 
-    <section class="relative isolate flex w-full scroll-m-16 flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16"
+    <section class="relative isolate flex w-full scroll-m-16 flex-col justify-center bg-[#DCC1AB] px-4 py-16"
       id="projects">
       <div id="overlay"
         class="absolute bottom-0 left-0 z-[1] flex h-[32rem] w-full items-end justify-center bg-gradient-to-b from-transparent to-[#DCC1AB]">
@@ -292,23 +292,23 @@
       </div>
       <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]" id="reveal">Realizacje</small>
-        <h2 class="mb-8 text-4xl font-medium lg:text-5xl" id="reveal">
+        <h2 class="mb-16 text-4xl font-medium lg:text-5xl" id="reveal">
           Nasze <span class="font-semibold italic">projekty</span>
         </h2>
       </div>
-      <div class="grid grid-flow-dense grid-cols-1 gap-1 lg:grid-cols-3" id="reveal">
+      <div class="grid grid-flow-dense grid-cols-2 gap-1 lg:grid-cols-3" id="reveal">
         <div id="photo-4-clickable"
           class="group relative flex w-auto cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:transition-transform hover:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo0.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-5-clickable"
-          class="group relative lg:row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo1.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-6-clickable"
-          class="group relative lg:row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo2.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
@@ -328,38 +328,37 @@
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-10-clickable"
-          class="group relative lg:row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-3 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo6.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-11-clickable"
-          class="group relative hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000 lg:row-span-2">
           <img src="./assets/photo7.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-12-clickable"
-          class="group relative lg:row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo8.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-13-clickable"
-          class="group relative lg:row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo9.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-14-clickable"
-          class="group relative lg:row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="./assets/photo10.jpeg"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
       </div>
     </section>
 
-    <section class="flex w-full scroll-m-16 items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16"
-      id="contact">
+    <section class="flex w-full scroll-m-16 items-center justify-center bg-[#F5F0EC] lg:px-40 lg:py-16" id="contact">
       <div
         class="flex w-full flex-wrap items-center justify-between gap-1 bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
-        <h4 class="mb-8 text-2xl lg:mb-0 lg:text-3xl" id="reveal">
+        <h4 class="mb-4 text-2xl lg:mb-0 lg:text-3xl" id="reveal">
           Zostańmy w kontakcie! <br />Znajdziesz nas na
           <span class="font-medium italic">Instagramie.</span>
         </h4>
@@ -385,13 +384,13 @@
       </div>
       <hr class="my-8 bg-white" />
       <div class="mb-8 flex flex-wrap justify-between">
-        <ul class="mb-4 flex flex-wrap gap-x-16 gap-y-1 lg:mb-0">
+        <ul class="mb-4 flex flex-wrap gap-x-8 gap-y-1 lg:mb-0">
           <a href="#">Kontakt</a>
           <a href="#">Facebook</a>
           <a href="#">Instagram</a>
           <a href="#">LinkedIn</a>
         </ul>
-        <ul class="flex flex-wrap gap-x-16 gap-y-1">
+        <ul class="flex flex-wrap gap-x-8 gap-y-1">
           <li class="text-right">000-000-000</li>
           <li>
             <a href="mailto:giarddesign@kontakt.pl">giarddesign@kontakt.pl</a>
